[metadata]
name = pynanovnav2-tspspi
version = 0.0.1
author = Thomas Spielauer
author_email = pypipackages01@tspi.at
description = NanoVNA2 Python libraries and tools (unofficial)
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/tspspi/pynanovnav2
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
	pylabdevs-tspspi >= 0.0.11
	pyserial >= 3.5

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	nanovnav2fetch = pynanovnav2.util_fetch:main
